--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
               <div class="hero-buttons">
                 <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Get Started</a>
-                <a href="harish.mp4" class="glightbox" >
+               <a href="https://www.youtube.com/watch?v=jy7cktxpKJM&list=LL" class="btn btn-link mt-2 mt-sm-0 glightbox">
                 
                   <i class="bi bi-play-circle me-1"></i>
                   Play Video
