--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - NotesFy</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NotesFy - Your Ultimate Source for BTech CSE Notes</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="NotesFy - BTech CSE Study Material | Tula's Notes & Handwritten Notes">
+  <meta name="description" content="Explore NotesFy for high-quality BTech CSE study materials, Tula's notes, handwritten notes, UTU notes, and much more. Perfect for engineering students looking for reliable resources.">
+  <meta name="keywords" content="NotesFy, BTech CSE notes, Tula's notes, handwritten notes, UTU notes, engineering study material, computer science notes, CSE study resources, Tula's handwritten notes, UTU study material">
+  <meta name="author" content="NotesFy Team">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hari-singh-joshi.github.io/NotesFy/">
+  <meta property="og:title" content="NotesFy - BTech CSE Study Material | Tula's Notes & Handwritten Notes">
+  <meta property="og:description" content="Discover the best BTech CSE study resources with NotesFy. Tula's notes, handwritten notes, UTU materials, and more for engineering students.">
+  <meta property="og:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://hari-singh-joshi.github.io/NotesFy/">
+  <meta property="twitter:title" content="NotesFy - BTech CSE Study Material | Tula's Notes & Handwritten Notes">
+  <meta property="twitter:description" content="Your one-stop destination for BTech CSE notes, Tula's notes, handwritten notes, and UTU study materials. Visit NotesFy today!">
+  <meta property="twitter:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
+
+  <!-- Additional SEO -->
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="distribution" content="global">
+  <meta name="rating" content="general">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
