--- a/index.html
+++ b/index.html
@@ -863,9 +863,9 @@
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="feature-box red">
               <i class="bi bi-shield-check"></i>
-              <h4>Mathematics-II</h4>
-              <p>100% Gurantee for M2 pass in University Exam</p>  
-              <a href="#">click here</a>
+              <h4>Placement</h4>
+              <p>Notes for Placement point of view</p>  
+              <a href="https://drive.google.com/drive/folders/15TPnX5WWD_YFYOv47a2FJsF8YuOirmJa?usp=drive_link">click here</a>
             </div>
           </div><!-- End Feature Borx-->
 
