--- a/index.html
+++ b/index.html
@@ -1930,7 +1930,7 @@
           <div class="col-lg-7">
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3>Get In Touch</h3>
-              <p>You can mail us on.</p>
+              <p>You can mail us and kindly give us feedback through this form</p>
 
               <form action="https://formsubmit.co/joshiharish942@gmail.com" method="POST"  data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
