--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="NotesFy - BTech CSE Study Material | Exam Oriented Handwritten Notes">
-  <meta name="description" content="Explore NotesFy for high-quality BTech CSE study materials, Tula's notes, handwritten notes, UTU notes, and much more. Perfect for engineering students looking for reliable resources.">
-  <meta name="keywords" content="NotesFy, BTech CSE notes, Tula's notes, handwritten notes, UTU notes, engineering study material, computer science notes, CSE study resources, Tula's handwritten notes, UTU study material">
+  <meta name="description" content="Explore NotesFy for high-quality BTech CSE study materials, UTU/Tula's notes, handwritten notes, UTU notes, and much more. Perfect for engineering students looking for reliable resources.">
+  <meta name="keywords" content="NotesFy, BTech CSE notes, UTU/Tula's notes, handwritten notes, UTU notes, engineering study material, computer science notes, CSE study resources, UTU's handwritten notes, UTU study material">
   <meta name="author" content="NotesFy Team">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://hari-singh-joshi.github.io/NotesFy/">
-  <meta property="og:title" content="NotesFy - BTech CSE Study Material | Tula's Notes & Handwritten Notes">
+  <meta property="og:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
   <meta property="og:description" content="Discover the best BTech CSE study resources with NotesFy. Tula's notes, handwritten notes, UTU materials, and more for engineering students.">
   <meta property="og:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://hari-singh-joshi.github.io/NotesFy/">
-  <meta property="twitter:title" content="NotesFy - BTech CSE Study Material | Tula's Notes & Handwritten Notes">
-  <meta property="twitter:description" content="Your one-stop destination for BTech CSE notes, Tula's notes, handwritten notes, and UTU study materials. Visit NotesFy today!">
+  <meta property="twitter:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
+  <meta property="twitter:description" content="Your one-stop destination for BTech CSE notes, UTU/Tula's notes, handwritten notes, and UTU study materials. Visit NotesFy today!">
   <meta property="twitter:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
 
   <!-- Additional SEO -->
@@ -855,8 +855,8 @@
             <div class="feature-box green">
               <i class="bi bi-sunrise"></i>
               <h4>Web Development</h4>
-              <p>Html,css,bootstrap,javascript and django complete guide</p>
-              <a href="https://docs.google.com/document/d/102DRFeW5NucTcROGxoUN4q8kBhoi4Fv3/edit?usp=drive_link&ouid=104152238068521332309&rtpof=true&sd=true">click here</a>
+              <p>Html,css,bootstrap,javascript and django and nodejs complete guide</p>
+              <a href="https://drive.google.com/drive/folders/1pYgZzspUbJ4vvP409MDehLQgDOQFo7ko?usp=drive_link">click here</a>
             </div>
           </div><!-- End Feature Borx-->
 
