--- a/index.html
+++ b/index.html
@@ -1924,6 +1924,50 @@
                   <p>hari.202104115@tulas.edu.in</p>
                 </div>
               </div>
+
+              
+              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon-box">
+                  <i class="bi bi-star-fill"></i>
+
+                </div>
+                <div class="content">
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="color: #ff9f00;">
+                    <h4 class="text-white">Click Me</h4>
+                  </button>
+                  <p class="text-white">Kindly Rate us for our services.</p>
+                  
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Rate Us</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Embed the Google Form -->
+        <iframe 
+          src="https://docs.google.com/forms/d/e/1FAIpQLSfO-qFqzqkepxczpPX76eQ3geN0oAFSJRQXUYE4qdXEjlHWlw/viewform?embedded=true" 
+          width="100%" 
+          height="500" 
+          frameborder="0" 
+          marginheight="0" 
+          marginwidth="0"
+          style="border: none; display: block;">
+        </iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
             </div>
           </div>
 
