--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <div class="customers-badge">
                 <div class="customer-avatars">
                   <img src="assets/img/avatar-1.jpg" alt="Customer 1" class="avatar">
-                  <img src="assets/img/avatar-2.png" alt="Customer 2" class="avatar">
+                  <img src="assets/img/avatar-4.jpg" alt="Customer 2" class="avatar">
                   <img src="assets/img/avatar-3.jpg" alt="Customer 3" class="avatar">
                   <img src="assets/img/avatar-4.jpg" alt="Customer 4" class="avatar">
                   <img src="assets/img/avatar-5.webp" alt="Customer 5" class="avatar">
