--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
                 <div class="card" style="width: 14rem;">
                   <div class="card-body">
                     <h5 class="card-title">Physics</h5>
+                     <p class="card-text">Handwritten Notes for Physics</p>
                     <a href="https://drive.google.com/drive/folders/1ns1uiKZYSjiTwY9wl5QgmuGx6EcECgoh?usp=drive_link" class="card-link text-warning">Download</a>
                   </div>
                   </div>
@@ -400,7 +401,7 @@
                   <div class="card" style="width: 14rem;">
                     <div class="card-body">
                       <h5 class="card-title">Engineering Mathematics-I</h5>
-
+                      <p class="card-text">Handwritten Notes for Mathematics-I</p>
                       <a href="https://drive.google.com/drive/folders/13cmxUCOb_sXeiTDxKKn5NNWTAtZK4fd3?usp=drive_link" class="card-link text-warning">Download</a>
                     </div>
                     </div>
@@ -411,6 +412,7 @@
                     <div class="card" style="width: 14rem;">
                       <div class="card-body">
                         <h5 class="card-title">Electrical Engineering</h5>
+                        <p class="card-text">Handwritten Notes for Electrical Engineering</p>
                         <a href="https://drive.google.com/drive/folders/1qs9TQ5FBfYzdGhclavZeStGeLCcjfAfH?usp=drive_link" class="card-link text-warning">Download</a>
                       </div>
                       </div>
@@ -419,7 +421,8 @@
                     <div class="col mt-3">
                       <div class="card" style="width: 14rem;">
                         <div class="card-body">
-                          <h5 class="card-title">C++ Programming</h5>                          
+                          <h5 class="card-title">C++ Programming</h5>  
+                          <p class="card-text">Handwritten Notes for C++ Programming</p>
                           <a href="https://drive.google.com/drive/folders/1_OiXiGiKUXKaMpIEa-AVGSRpNFsc98Tx?usp=drive_link" class="card-link text-warning">Download</a>
                         </div>
                         </div>
