--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                   <div class="col mt-3">
                       <div class="card" style="width: 14rem;">
                           <div class="card-body">
-                              <h5 class="card-title">Theory of Computation</h5>
+                              <h5 class="card-title">Theory of Automata & Computation</h5>
                               <p class="card-text">Notes for Theory of Computation.</p>
                               <a href="https://drive.google.com/drive/folders/1zBkAFIS-KEZXpbVT5oi4Z6IMNSnPK7vT?usp=drive_link" class="card-link text-warning">Download</a>
                           </div>
@@ -807,8 +807,8 @@
                   <div class="col mt-3">
                       <div class="card" style="width: 14rem;">
                           <div class="card-body">
-                              <h5 class="card-title">Blockchain</h5>
-                              <p class="card-text">Notes for Blockchain.</p>
+                              <h5 class="card-title">Artificial Intelligence</h5>
+                              <p class="card-text">Notes for Artificial Intelligence</p>
                               <a href="https://drive.google.com/drive/folders/17uYCnfhaDQOFyaI6GxA9b13AuBWY7dhB?usp=drive_link" class="card-link text-warning">Download</a>
                           </div>
                       </div>
