--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <a class="btn-getstarted" href="https://median.co/share/xkmmoj#apk">Download App</a>
 
     </div>
   </header>
