--- a/index.html
+++ b/index.html
@@ -7,59 +7,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NotesFy - Your Ultimate Source for BTech CSE Notes</title>
 
-  <!-- Primary Meta Tags -->
+ 
   <meta name="title" content="NotesFy - BTech CSE Study Material | Exam Oriented Handwritten Notes">
   <meta name="description" content="Explore NotesFy for high-quality BTech CSE study materials, UTU/Tula's notes, handwritten notes, UTU notes, and much more. Perfect for engineering students looking for reliable resources.">
   <meta name="keywords" content="NotesFy, BTech CSE notes, UTU/Tula's notes, handwritten notes, UTU notes, engineering study material, computer science notes, CSE study resources, UTU's handwritten notes, UTU study material">
   <meta name="author" content="NotesFy Team">
 
-  <!-- Open Graph / Facebook -->
+
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://hari-singh-joshi.github.io/NotesFy/">
+  <meta property="og:url" content="https://notes-fy.vercel.app/">
   <meta property="og:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
   <meta property="og:description" content="Discover the best BTech CSE study resources with NotesFy. Tula's notes, handwritten notes, UTU materials, and more for engineering students.">
-  <meta property="og:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
+  <meta property="og:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
 
-  <!-- Twitter -->
+  
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://hari-singh-joshi.github.io/NotesFy/">
+  <meta property="twitter:url" content="https://notes-fy.vercel.app/">
   <meta property="twitter:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
   <meta property="twitter:description" content="Your one-stop destination for BTech CSE notes, UTU/Tula's notes, handwritten notes, and UTU study materials. Visit NotesFy today!">
-  <meta property="twitter:image" content="https://hari-singh-joshi.github.io/NotesFy/path-to-image.jpg">
+  <meta property="twitter:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
 
-  <!-- Additional SEO -->
+  
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="distribution" content="global">
   <meta name="rating" content="general">
-  <!-- Favicons -->
+
   <link href="assets/img/favicon.jpg" rel="icon">
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
-  <!-- Fonts -->
+
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iLanding
-  * Template URL: https://bootstrapmade.com/ilanding-bootstrap-landing-page-template/
-  * Updated: Nov 12 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
-
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
