--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">NotesFy</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
       
-        Designed by <a href="#">Hari Singh Joshi</a>
+        Designed by <a href="#">Hari Singh Joshi</a> |  <a href="policy.html">Policy Page</a>
       </div>
     </div>
 
@@ -2019,9 +2019,8 @@
 
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
- 
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
- 
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
