--- a/index.html
+++ b/index.html
@@ -2028,6 +2028,8 @@
 
   
   <script src="assets/js/main.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7913957132300666"
+     crossorigin="anonymous"></script>
 
 </body>
 
