--- a/policy.html
+++ b/policy.html
@@ -494,6 +494,9 @@
   
   <script src="assets/js/main.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7913957132300666"
+     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
