--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="language" content="English">
   <meta name="distribution" content="global">
   <meta name="rating" content="general">
-
+  <meta name="google-adsense-account" content="ca-pub-7913957132300666">
   <link href="assets/img/favicon.jpg" rel="icon">
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
