--- a/policy.html
+++ b/policy.html
@@ -10,7 +10,7 @@
     <meta name="description" content="NotesFy Privacy Policy and Terms of Service. Learn how we collect, use, protect your data, and outline site terms.">
     <meta name="keywords" content="NotesFy privacy policy, terms of service, notesfy terms, privacy, data protection">
     <meta name="author" content="NotesFy Team">
-  
+    <meta name="google-adsense-account" content="ca-pub-7913957132300666">
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://notes-fy.vercel.app/policy.html">
