--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://notes-fy.vercel.app/">
+  <meta property="og:url" content="https://notesfy.vercel.app/">
   <meta property="og:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
   <meta property="og:description" content="Discover the best BTech CSE study resources with NotesFy. Tula's notes, handwritten notes, UTU materials, and more for engineering students.">
-  <meta property="og:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
+  <meta property="og:image" content="https://notesfy.vercel.app/assets/img/favicon.jpg">
 
   
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://notes-fy.vercel.app/">
+  <meta property="twitter:url" content="https://notesfy.vercel.app/">
   <meta property="twitter:title" content="NotesFy - BTech CSE Study Material | UTU/Tula's Notes & Handwritten Notes">
   <meta property="twitter:description" content="Your one-stop destination for BTech CSE notes, UTU/Tula's notes, handwritten notes, and UTU study materials. Visit NotesFy today!">
-  <meta property="twitter:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
+  <meta property="twitter:image" content="https://notesfy.vercel.app/assets/img/favicon.jpg">
 
   
   <meta name="robots" content="index, follow">
