--- a/policy.html
+++ b/policy.html
@@ -13,14 +13,14 @@
     <meta name="google-adsense-account" content="ca-pub-7913957132300666">
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://notes-fy.vercel.app/policy.html">
+    <meta property="og:url" content="https://notesfy.vercel.app/policy.html">
     <meta property="og:title" content="NotesFy – Privacy Policy & Terms">
     <meta property="og:description" content="Privacy policy and terms of service for NotesFy study materials website.">
-    <meta property="og:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
+    <meta property="og:image" content="https://notesfy.vercel.app/assets/img/favicon.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="NotesFy – Privacy Policy & Terms">
     <meta name="twitter:description" content="Our privacy practices and site usage terms explained clearly.">
-    <meta name="twitter:image" content="https://notes-fy.vercel.app/assets/img/favicon.jpg">
+    <meta name="twitter:image" content="https://notesfy.vercel.app/assets/img/favicon.jpg">
   
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
